--- a/index.css
+++ b/index.css
@@ -9,65 +9,101 @@
 }
 nav{
 background-color: #4e5944;
+width: auto;
+}
 
+/* .logo{
+    height: 1px;
+    width: 1px; */
 }
 
 nav ul{
-   
-       width: 900px;
-    margin: 0 auto;
+   display: inline-block;
+    width: 900px;
+    margin: auto, right;
     text-align: right;
     height: 100px;
     text-decoration: none;
+    padding-left: 300px;
+    align-content: right;
 }
 
 nav ul li{
    
     display: inline-block;
-    padding: 10px 7px ;
+    padding: 20px 8px ;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
      margin-top: 20px;
     font-size: 15px;
+    margin-left: 20px;
 
 }
 li a{
     color: white;
     text-decoration: none;
+    
 }
 
 body{
-    padding-left: 50px;
-    padding-right: 50px;
+    /* padding-left: 50px;
+    padding-right: 50px; */
     background-color: #e2e2e2;
-    margin: auto 20px;
+    /* margin: auto 20px; */
 }
 .firstimage{
-margin-left: 300px;
+margin-left: 500px;
 margin-top: 20px;
 
 }
 .family{
     width: 700px;
-    
+}
+.pad{
+    color: #4e5944;
+    height: 450px;
+    width: 300px;
+    background-color: #e9e9e9;
+    margin-top: 20px;
+    position: absolute;
+    left: 200px;
+    /* padding-top: 30px; */
+}
+.easy{
+    text-align: center;
+    padding-top: 80px;
+    font-size: 25px;
+}
+.set{
+    text-align: center;
+    font-size: 27px;
+    margin-top: 50px;
 }
 
 .manes{
-    height: 200px;
-    width: 700px;
-    background-color:  #a4aa9e;
-    padding-left: 0%;
-    border-right: red, dotted
+    height: 220px;
+    width: auto;
+    background-color: white;
+    padding-left: 190px;
+    /* background-color: black; */
+    /* border-right: red, dotted */
 }
 
 .wrap{
     background: color #a4aa9e; ;
-    width: 700px;
-    ;
-    height: 200px;
+    width: 650px;
+    height: 217px;
+    /* background-color: yellow; */
+    border-color: #4e5944;;
+    border-width: 5px;
+    border-style: dotted;
+    border-top: none;
+    border-left: none;
+    border-bottom: none;
+    
 }
 
 #winchester{
-    padding-top: 20px;
+    padding-top: 42px;
     padding-bottom: 10px;
     color: #4e5944;
     font-size: 20px;
@@ -77,18 +113,23 @@ margin-top: 20px;
 .promise{
     font-family: poppins;
     color: #4e5944;
-    text-align: justify center;
+    text-align: justify left;
+    font-size: 14px;
+    padding-top: 10px;
 
 }
 .wrapper{
     
-    background-color: #a4aa9e;
+    /* background-color: red; */
     height: 200px;
-    width: 400px;
+    width: 300px;
     position: absolute;
-    right: 50px;
+    right: 90px;
+    align-content: flex-start;
     top: 574px;
-    padding-left: 200px;
+    padding-left: 60px;
+    padding-right: 50px;
+    /* border: 3px; red, dotted; */
     
 }
 .testimonial{
@@ -97,26 +138,32 @@ margin-top: 20px;
     color: #4e5944;
     font-size: 20px;
     font-family: montserrat;
+    margin-left: 0px;
+    /* text-align: left; */
 }
 .test{
-    color: #4e5944;
     font-family: poppins;
+    color: #4e5944;
+    text-align: justify left;
+    font-size: 14px
 }
 #quote{
     margin-top: 25px;
     margin-left: 150px;
     color: #4e5944;
+    font-size: 12px;
+    font-family: montserrat;
 }
 .section{
     height: 500px;
     background-color: #e2e2e2;
     align-content: center;
-    
-
-}
+    padding-left: 110px;
+    }
 .choose{
-    margin-top: 20px;
+    margin-top: 30px;
     margin-left: 50px;
+    color: #4e5944;
 }
 
 .thumbnail{
@@ -126,7 +173,7 @@ margin-top: 20px;
 .divorce{
     height: 150px;
     width: 200px;
-    border: 1px solid black;
+    border: 4px solid white;
     border-radius: 2px;
     padding: 5px;
     margin-left: 50px;
@@ -249,8 +296,8 @@ button:hover{
     align:center;
     /* width: 1000px; */
     height: 200px;
-    background-color: rgba(51, 123, 151, 0.973);
-    padding-left: 100px;
+    background-color: #d9d9d9;
+    padding-left: 150px;
     padding-top: 40px;
     /* border-top:maroon; */
     border-width: 10px;
@@ -259,7 +306,7 @@ button:hover{
     /* background-color: rgb(116, 238, 171); */
     display: inline-block;
     margin-bottom: 15px;
-    color: #4e5944;
+    color: #626262;
 }
 .links{
     /* background-color: green; */
@@ -276,7 +323,7 @@ button:hover{
 .this{
     font-family: sans-serif;
     font-size: 14px;
-    color: #4e5944;
+    color: black;
     margin-bottom: 20px;
 }
 .contact{
@@ -295,6 +342,7 @@ button:hover{
     /* background-color: hotpink; */
     display: inline-block;
     margin-bottom: 10px;
+    color: #626262;
 }
 .message{
     /* background-color: lightsalmon; */
@@ -307,6 +355,24 @@ button:hover{
     border-left: none;
     border-top: none;
     border-bottom: none;
+}
+
+.end{
+    width: auto;
+    height: 25px;
+    background-color: #4e5944;
+    padding-left: 150px;
+}
+.social{
+
+
+}
+.copyright{
+    display: inline-block;
+    color: #a4aa9e;
+    font-size: 10px;
+    margin-left: 700px;
+    font-family: poppins;
 }
 /* .message, .contact, .links{
     /* display: flex; */
