--- a/index.css
+++ b/index.css
@@ -20,22 +20,22 @@ width: auto;
 nav ul{
    display: inline-block;
     width: 900px;
-    margin: auto, right;
+    /* margin: auto, 500px; */
     text-align: right;
     height: 100px;
     text-decoration: none;
-    padding-left: 300px;
+    /* padding-left: 800px; */
     align-content: right;
 }
 
 nav ul li{
    
     display: inline-block;
-    padding: 20px 8px ;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    padding: 25px 10px;
+    font-family: montserrat, Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
      margin-top: 20px;
     font-size: 15px;
-    margin-left: 20px;
+    margin-left: 0px;
 
 }
 li a{
@@ -182,6 +182,7 @@ margin-top: 20px;
 .why{
     margin-bottom: 30px;
     margin-left: 50px;
+    padding-top: 30px;
 }
 .lawyers{
 width: 215px;
@@ -297,7 +298,7 @@ button:hover{
     /* width: 1000px; */
     height: 200px;
     background-color: #d9d9d9;
-    padding-left: 150px;
+    padding-left: 200px;
     padding-top: 40px;
     /* border-top:maroon; */
     border-width: 10px;
