box shadow added

--- a/index.css
+++ b/index.css
@@ -177,6 +177,7 @@ margin-top: 20px;
     border-radius: 2px;
     padding: 5px;
     margin-left: 50px;
+    box-shadow: 4px 8px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
 .why{
